@@ -189,9 +189,10 @@ EOX
 		push @{$r}, $part;
 	}
 
-	foreach my $dataobj ( $opts{list}->get_records )
-	{
-		$part = $plugin->output_dataobj( $dataobj, %opts );
+	$opts{list}->map( sub {
+		my( $session, $dataset, $item ) = @_;
+
+		my $part = $plugin->output_dataobj( $item, %opts );
 		if( defined $opts{fh} )
 		{
 			print {$opts{fh}} $part;
@@ -200,7 +201,7 @@ EOX
 		{
 			push @{$r}, $part;
 		}
-	}	
+	} );
 
 	$part= "</$toplevel>\n";
 	if( defined $opts{fh} )
